Fix CSS formatting and remove excess whitespace

--- a/style.css
+++ b/style.css
@@ -19,9 +19,8 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: white;
     text-align: center;
-    color: #fdf9ef;
+    font-color: #fdf9ef;
     padding: 1rem;
     text-align: center;
 }
@@ -73,6 +72,7 @@ a:active {
 a:visited {
   color: purple;
 }
+
 
 
 
